@@ -81,6 +81,7 @@ start_tester() {
     JVM_ARGS="$JVM_ARGS --add-opens=java.base/java.net=ALL-UNNAMED"
     JVM_ARGS="$JVM_ARGS --add-opens=java.base/java.security=ALL-UNNAMED"
     JVM_ARGS="$JVM_ARGS --add-opens=java.base/java.util=ALL-UNNAMED"
+    JVM_ARGS="$JVM_ARGS --add-opens=java.base/java.time=ALL-UNNAMED"
     JVM_ARGS="$JVM_ARGS --add-opens=java.base/java.util.concurrent=ALL-UNNAMED"
     JVM_ARGS="$JVM_ARGS --add-opens=java.base/sun.net.util=ALL-UNNAMED"
     JVM_ARGS="$JVM_ARGS --add-opens=java.base/sun.security.util=ALL-UNNAMED"
